fixed overlap

--- a/shapes.css
+++ b/shapes.css
@@ -2,6 +2,7 @@ body{
     margin: 0;
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
 }
 
 .color{
